<resources>
    <string name="app_name">ContactRoom</string>
    <string name="name_hint">Enter Name</string>
    <string name="occupation_hint">Occupation</string>
    <string name="btn_save_text">save</string>
    <string name="empty">enter information</string>
    <string name="description">add text button</string>
    <string name="update_button">update</string>
    <string name="delete_text">delete</string>
</resources>